--- a/css/main.css
+++ b/css/main.css
@@ -857,6 +857,88 @@ li.fancybox-thumbs-loading {
   .fancybox-thumbs > ul > li {
     max-width: calc(100% - 10px); } }
 
+/*!
+ * 
+ *         SimpleBar.js - v2.5.1
+ *         Scrollbars, simpler.
+ *         https://grsmto.github.io/simplebar/
+ *         
+ *         Made by Adrien Grsmto from a fork by Jonathan Nicol
+ *         Under MIT License
+ *       
+ */
+[data-simplebar] {
+  position: relative;
+  z-index: 0;
+  overflow: hidden;
+  -webkit-overflow-scrolling: touch;
+  /* Trigger native scrolling for mobile, if not supported, plugin is used. */ }
+
+[data-simplebar="init"] {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.simplebar-scroll-content {
+  overflow-x: hidden;
+  overflow-y: scroll;
+  min-width: 100%;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box; }
+
+.simplebar-content {
+  overflow-x: scroll;
+  overflow-y: hidden;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  min-height: 100%; }
+
+.simplebar-track {
+  z-index: 1;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 11px; }
+
+.simplebar-scrollbar {
+  position: absolute;
+  right: 2px;
+  border-radius: 7px;
+  min-height: 10px;
+  width: 7px;
+  opacity: 0;
+  -webkit-transition: opacity 0.2s linear;
+  -o-transition: opacity 0.2s linear;
+  transition: opacity 0.2s linear;
+  background: black;
+  background-clip: padding-box; }
+
+.simplebar-track:hover .simplebar-scrollbar {
+  /* When hovered, remove all transitions from drag handle */
+  opacity: 0.5;
+  -webkit-transition: opacity 0 linear;
+  -o-transition: opacity 0 linear;
+  transition: opacity 0 linear; }
+
+.simplebar-track .simplebar-scrollbar.visible {
+  opacity: 0.5; }
+
+.simplebar-track.horizontal {
+  left: 0;
+  width: auto;
+  height: 11px; }
+
+.simplebar-track.vertical {
+  top: 0; }
+
+.horizontal.simplebar-track .simplebar-scrollbar {
+  right: auto;
+  top: 2px;
+  height: 7px;
+  min-height: 0;
+  min-width: 10px;
+  width: auto; }
+
 *, *:after, *:before {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -913,6 +995,9 @@ i {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
+.i-rocket:before {
+  content: "\e906"; }
+
 .i-left:before {
   content: "\e904"; }
 
@@ -944,7 +1029,93 @@ a {
 
 h1, .h1 {
   font-family: "Affect", "Helvetica Neue", Arial, sans-serif;
-  font-size: 60px; }
+  font-size: 60px;
+  text-transform: uppercase;
+  font-weight: bold; }
+  @media (max-width: 1400px) {
+    h1, .h1 {
+      font-size: 54px; } }
+  @media (max-width: 1024px) {
+    h1, .h1 {
+      font-size: 48px; } }
+  @media (max-width: 680px) {
+    h1, .h1 {
+      font-size: 28px; } }
+  @media (max-width: 480px) {
+    h1, .h1 {
+      font-size: 24px; } }
+
+h2, .h2 {
+  font-family: "Affect", "Helvetica Neue", Arial, sans-serif;
+  font-size: 54px;
+  text-transform: uppercase;
+  font-weight: bold; }
+  @media (max-width: 1400px) {
+    h2, .h2 {
+      font-size: 48px; } }
+  @media (max-width: 1024px) {
+    h2, .h2 {
+      font-size: 28px; } }
+  @media (max-width: 680px) {
+    h2, .h2 {
+      font-size: 22px; } }
+  @media (max-width: 480px) {
+    h2, .h2 {
+      font-size: 20px; } }
+
+h3, .h3 {
+  font-family: "Affect", "Helvetica Neue", Arial, sans-serif;
+  font-size: 36px;
+  text-transform: uppercase;
+  font-weight: bold; }
+  @media (max-width: 1400px) {
+    h3, .h3 {
+      font-size: 28px; } }
+  @media (max-width: 1024px) {
+    h3, .h3 {
+      font-size: 24px; } }
+  @media (max-width: 680px) {
+    h3, .h3 {
+      font-size: 20px; } }
+  @media (max-width: 480px) {
+    h3, .h3 {
+      font-size: 18px; } }
+
+h4, .h4 {
+  font-family: "Affect", "Helvetica Neue", Arial, sans-serif;
+  font-size: 26px;
+  text-transform: uppercase;
+  font-weight: bold; }
+  @media (max-width: 1400px) {
+    h4, .h4 {
+      font-size: 24px; } }
+  @media (max-width: 1024px) {
+    h4, .h4 {
+      font-size: 18px; } }
+  @media (max-width: 680px) {
+    h4, .h4 {
+      font-size: 16px; } }
+  @media (max-width: 480px) {
+    h4, .h4 {
+      font-size: 14px; } }
+
+h5, .h5 {
+  font-family: "Affect", "Helvetica Neue", Arial, sans-serif;
+  font-size: 22px;
+  text-transform: uppercase;
+  font-weight: bold; }
+  @media (max-width: 1400px) {
+    h5, .h5 {
+      font-size: 20px; } }
+  @media (max-width: 1024px) {
+    h5, .h5 {
+      font-size: 16px; } }
+  @media (max-width: 680px) {
+    h5, .h5 {
+      font-size: 14px; } }
+  @media (max-width: 480px) {
+    h5, .h5 {
+      font-size: 12px; } }
 
 .grid-1, .grid-2, .grid-3, .grid-4, .grid-5, .grid-6, .grid-7, .grid-8, .grid-9, .grid-10, .grid-11, .grid-12 {
   -ms-flex-negative: 1;
@@ -1431,9 +1602,7 @@ body {
       padding-left: 260px; } }
   @media (max-width: 1024px) {
     body {
-      padding-left: 200px; } }
-  @media (max-width: 768px) {
-    body {
+      padding-top: 40px;
       padding-left: 0; } }
 
 .container {
@@ -1468,56 +1637,176 @@ body {
       width: 100%;
       left: -100%; } }
 
+.def-sec {
+  padding-top: 60px;
+  padding-bottom: 60px; }
+  @media (max-width: 1400px) {
+    .def-sec {
+      padding-top: 40px;
+      padding-bottom: 40px; } }
+  @media (max-width: 1024px) {
+    .def-sec {
+      padding-top: 30px;
+      padding-bottom: 30px; } }
+  @media (max-width: 680px) {
+    .def-sec {
+      padding-top: 20px;
+      padding-bottom: 20px; } }
+
 label {
   cursor: pointer; }
 
-.text-input {
+.input-text {
   display: inline-block;
+  width: 100%;
+  padding: 15px 25px;
   font-family: "Proxima Nova", "Helvetica Neue", Arial, sans-serif;
   font-size: 14px;
   line-height: 1.3;
   -webkit-appearance: none;
-  border: 1px solid #666;
-  padding: 5px 10px;
+  border: 1px solid #fff;
+  border-radius: 27px;
   overflow: visible; }
-  .text-input::-webkit-input-placeholder {
+  @media (max-width: 1400px) {
+    .input-text {
+      padding: 14px 23px; } }
+  @media (max-width: 1024px) {
+    .input-text {
+      padding: 12px 20px; } }
+  .input-text::-webkit-input-placeholder {
     font-size: 14px;
     color: #A8A8A8;
     opacity: 1;
     -webkit-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
     transition: all 0.3s ease; }
-  .text-input::-moz-placeholder {
+  .input-text::-moz-placeholder {
     font-size: 14px;
     color: #A8A8A8;
     opacity: 1;
     -webkit-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
     transition: all 0.3s ease; }
-  .text-input:-moz-placeholder {
+  .input-text:-moz-placeholder {
     font-size: 14px;
     color: #A8A8A8;
     opacity: 1;
     -webkit-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
     transition: all 0.3s ease; }
-  .text-input:-ms-input-placeholder {
+  .input-text:-ms-input-placeholder {
     font-size: 14px;
     color: #A8A8A8;
     opacity: 1;
     -webkit-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
     transition: all 0.3s ease; }
-  .text-input:focus {
+  .input-text:focus {
     outline: none; }
-    .text-input:focus::-webkit-input-placeholder {
+    .input-text:focus::-webkit-input-placeholder {
       opacity: 0; }
-    .text-input:focus::-moz-placeholder {
+    .input-text:focus::-moz-placeholder {
       opacity: 0; }
-    .text-input:focus:-moz-placeholder {
+    .input-text:focus:-moz-placeholder {
       opacity: 0; }
-    .text-input:focus:-ms-input-placeholder {
+    .input-text:focus:-ms-input-placeholder {
       opacity: 0; }
+  .input-text--subscr {
+    padding-right: 95px;
+    color: #2a2c3d;
+    font-size: 12px;
+    text-transform: uppercase; }
+    @media (max-width: 1400px) {
+      .input-text--subscr {
+        padding-right: 85px; } }
+    @media (max-width: 1024px) {
+      .input-text--subscr {
+        padding-right: 75px; } }
+    .input-text--subscr::-webkit-input-placeholder {
+      font-size: 12px;
+      text-transform: uppercase;
+      color: #2a2c3d;
+      opacity: 1;
+      -webkit-transition: all 0.3s ease;
+      -o-transition: all 0.3s ease;
+      transition: all 0.3s ease; }
+    .input-text--subscr::-moz-placeholder {
+      font-size: 12px;
+      text-transform: uppercase;
+      color: #2a2c3d;
+      opacity: 1;
+      -webkit-transition: all 0.3s ease;
+      -o-transition: all 0.3s ease;
+      transition: all 0.3s ease; }
+    .input-text--subscr:-moz-placeholder {
+      font-size: 12px;
+      text-transform: uppercase;
+      color: #2a2c3d;
+      opacity: 1;
+      -webkit-transition: all 0.3s ease;
+      -o-transition: all 0.3s ease;
+      transition: all 0.3s ease; }
+    .input-text--subscr:-ms-input-placeholder {
+      font-size: 12px;
+      text-transform: uppercase;
+      color: #2a2c3d;
+      opacity: 1;
+      -webkit-transition: all 0.3s ease;
+      -o-transition: all 0.3s ease;
+      transition: all 0.3s ease; }
+
+.form-subscribe {
+  position: relative; }
+  .form-subscribe input {
+    display: block; }
+  .form-subscribe button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    width: 85px;
+    height: 100%;
+    text-align: center;
+    border: none;
+    border-radius: 0 27px 27px 0;
+    font-size: 30px;
+    -webkit-box-shadow: 0 0 10px 0 #fff inset;
+    box-shadow: 0 0 10px 0 #fff inset;
+    cursor: pointer;
+    -webkit-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    background: #72e1f4; }
+    @media (max-width: 1400px) {
+      .form-subscribe button {
+        width: 75px;
+        font-size: 28px; } }
+    @media (max-width: 1024px) {
+      .form-subscribe button {
+        width: 65px;
+        font-size: 26px; } }
+    .form-subscribe button:hover {
+      background: #f3afd0; }
+      .form-subscribe button:hover i {
+        color: #fff; }
+  .form-subscribe i {
+    display: block;
+    width: 100%;
+    padding-right: 5px;
+    text-align: center;
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+    -webkit-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease; }
 
 .style-checkbox {
   display: block;
@@ -1698,8 +1987,11 @@ button::-moz-focus-inner {
 
 .top-panel__mobile {
   display: none; }
-  @media (max-width: 768px) {
+  @media (max-width: 1024px) {
     .top-panel__mobile {
+      position: fixed;
+      top: 0;
+      left: 0;
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
@@ -1711,13 +2003,16 @@ button::-moz-focus-inner {
       justify-content: space-between;
       width: 100%;
       padding-left: 50px;
+      padding-right: 10px;
       padding-top: 5px;
-      padding-bottom: 5px; } }
+      padding-bottom: 5px;
+      background: #fff;
+      z-index: 11; } }
 
 .top-panel__menu {
   max-width: 960px;
   width: 100%; }
-  @media (max-width: 768px) {
+  @media (max-width: 1024px) {
     .top-panel__menu {
       display: none; } }
   .top-panel__menu ul {
@@ -1761,10 +2056,6 @@ button::-moz-focus-inner {
   padding-left: 12px;
   padding-right: 12px; }
   @media (max-width: 1024px) {
-    .top-panel__soc {
-      padding-left: 5px;
-      padding-right: 5px; } }
-  @media (max-width: 768px) {
     .top-panel__soc {
       display: none !important; } }
 
@@ -1893,23 +2184,28 @@ button::-moz-focus-inner {
   padding-bottom: 30px;
   background: #72e1f4;
   overflow: auto;
-  -webkit-overflow-scrolling: touch; }
+  -webkit-overflow-scrolling: touch;
+  z-index: 10; }
   @media (max-width: 1400px) {
     .aside-panel {
       width: 260px; } }
   @media (max-width: 1024px) {
     .aside-panel {
-      width: 200px; } }
-  @media (max-width: 768px) {
-    .aside-panel {
-      width: 100%;
+      width: 300px;
       padding-top: 50px;
-      -webkit-transform: translate3d(-100%, 0, 0);
-      transform: translate3d(-100%, 0, 0);
+      -webkit-transform: translate3d(-300px, 0, 0);
+      transform: translate3d(-300px, 0, 0);
       -webkit-transition: all 0.3s ease;
       -o-transition: all 0.3s ease;
       transition: all 0.3s ease;
       pointer-events: none; } }
+  @media (max-width: 768px) {
+    .aside-panel {
+      width: 100%;
+      -webkit-transform: translate3d(-100%, 0, 0);
+      transform: translate3d(-100%, 0, 0); } }
+  .aside-panel .mCSB_inside > .mCSB_container {
+    margin-right: 0; }
   .aside-panel.opened {
     pointer-events: all;
     -webkit-transform: translate3d(0, 0, 0);
@@ -1937,15 +2233,20 @@ button::-moz-focus-inner {
   @media (max-width: 768px) {
     .aside-panel__logo {
       display: none; } }
+  .aside-panel__logo a {
+    display: block; }
   .aside-panel__logo img {
     display: block;
     max-width: 100%; }
     @media (max-width: 1400px) {
       .aside-panel__logo img {
-        max-width: 140px; } }
+        max-width: 100px; } }
     @media (max-width: 1024px) {
       .aside-panel__logo img {
-        max-width: 120px; } }
+        max-width: 100px; } }
+
+.aside-panel__menu {
+  height: auto; }
 
 .a-menu a {
   display: block;
@@ -1971,7 +2272,10 @@ button::-moz-focus-inner {
   font-weight: bold;
   letter-spacing: 0.06em;
   color: #fff;
-  cursor: pointer; }
+  cursor: pointer;
+  -webkit-transition: opacity 0.3s ease, background 0.3s ease, color 0.3s ease;
+  -o-transition: opacity 0.3s ease, background 0.3s ease, color 0.3s ease;
+  transition: opacity 0.3s ease, background 0.3s ease, color 0.3s ease; }
   @media (max-width: 1400px) {
     .a-menu__back {
       padding-top: 10px;
@@ -2009,8 +2313,7 @@ button::-moz-focus-inner {
     justify-content: center;
     width: 50px;
     height: 100%;
-    padding: 0 !important;
-    opacity: 0; }
+    padding: 0 !important; }
     @media (max-width: 1024px) {
       .a-menu__back span {
         width: 35px;
@@ -2036,7 +2339,13 @@ button::-moz-focus-inner {
     color: #2a2c3d;
     background: #25cadc; }
   .a-menu__parent > li.opened .a-menu__child {
-    display: block; }
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
   .a-menu__parent > li.opened .a-menu__child-link {
     opacity: 0;
     pointer-events: none;
@@ -2075,7 +2384,17 @@ button::-moz-focus-inner {
         font-size: 14px; } }
 
 .a-menu__child {
-  display: none; }
+  display: none;
+  max-height: 360px;
+  overflow: hidden; }
+  @media (max-width: 1400px) {
+    .a-menu__child {
+      max-height: 230px; } }
+  @media (max-width: 1024px) {
+    .a-menu__child {
+      max-height: 220px; } }
+  .a-menu__child.ie {
+    overflow: auto; }
   .a-menu__child a {
     padding-top: 10px;
     padding-bottom: 10px;
@@ -2092,6 +2411,13 @@ button::-moz-focus-inner {
         padding-left: 20px; } }
     .a-menu__child a:hover {
       background: #25cadc; }
+  .a-menu__child .simplebar-track.vertical {
+    right: 4px;
+    border-radius: 8px;
+    background: #5bdaed; }
+  .a-menu__child .simplebar-track .simplebar-scrollbar.visible {
+    opacity: 0.8;
+    background: #fff; }
   .a-menu__child.hide {
     opacity: 0; }
 
@@ -2193,13 +2519,97 @@ button::-moz-focus-inner {
   .a-menu__nav a {
     font-size: 12px;
     text-transform: uppercase;
-    color: #2a2c3d;
-    border-bottom: 1px solid rgba(42, 44, 61, 0.4);
+    color: #fff;
+    border-bottom: 1px solid rgba(42, 44, 61, 0.2);
     -webkit-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
     transition: all 0.3s ease; }
     .a-menu__nav a:hover {
       border-color: #2a2c3d; }
+
+.footer-sec {
+  background: url("../img/bg-footer.jpg") no-repeat center center; }
+
+.footer__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding-left: 12px;
+  padding-right: 12px; }
+  .footer__info .h5 {
+    padding-bottom: 20px;
+    color: #f3afd0; }
+
+.footer__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 960px;
+  padding-right: 30px; }
+
+.footer__nav-block {
+  width: 50%; }
+  .footer__nav-block ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
+  .footer__nav-block li {
+    display: block;
+    width: 50%;
+    padding-right: 15px; }
+  .footer__nav-block a {
+    display: inline-block;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-size: 14px;
+    text-transform: uppercase;
+    color: #72e1f4;
+    -webkit-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease; }
+    @media (max-width: 1400px) {
+      .footer__nav-block a {
+        font-size: 13px; } }
+    @media (max-width: 1024px) {
+      .footer__nav-block a {
+        padding-top: 4px;
+        padding-bottom: 4px;
+        font-size: 12px; } }
+    .footer__nav-block a:hover {
+      color: #f3afd0; }
+  .footer__nav-block--left {
+    width: 40%; }
+  .footer__nav-block--right {
+    width: 60%; }
+
+.footer__subscribe {
+  width: 33.33333%;
+  max-width: 330px;
+  text-align: right; }
+  .footer__subscribe span {
+    display: block;
+    margin-top: 5px;
+    text-align: center;
+    font-size: 14px;
+    color: #666b94; }
+
+.footer__bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-left: 12px;
+  padding-right: 12px; }
 
 .scroll {
   height: 1000px; }
