--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -14,4 +14,94 @@ a {
 h1, .h1 {
 	font-family: $font-head;
 	font-size: 60px;
+	text-transform: uppercase;
+	font-weight: bold;
+	@include res(xl) {
+		font-size: 54px;
+	}
+	@include res(l) {
+		font-size: 48px;
+	}
+	@include res(s) {
+		font-size: 28px;
+	}
+	@include res(xs) {
+		font-size: 24px;
+	}
+}
+
+h2, .h2 {
+	font-family: $font-head;
+	font-size: 54px;
+	text-transform: uppercase;
+	font-weight: bold;
+	@include res(xl) {
+		font-size: 48px;
+	}
+	@include res(l) {
+		font-size: 28px;
+	}
+	@include res(s) {
+		font-size: 22px;
+	}
+	@include res(xs) {
+		font-size: 20px;
+	}
+}
+
+h3, .h3 {
+	font-family: $font-head;
+	font-size: 36px;
+	text-transform: uppercase;
+	font-weight: bold;
+	@include res(xl) {
+		font-size: 28px;
+	}
+	@include res(l) {
+		font-size: 24px;
+	}
+	@include res(s) {
+		font-size: 20px;
+	}
+	@include res(xs) {
+		font-size: 18px;
+	}
+}
+
+h4, .h4 {
+	font-family: $font-head;
+	font-size: 26px;
+	text-transform: uppercase;
+	font-weight: bold;
+	@include res(xl) {
+		font-size: 24px;
+	}
+	@include res(l) {
+		font-size: 18px;
+	}
+	@include res(s) {
+		font-size: 16px;
+	}
+	@include res(xs) {
+		font-size: 14px;
+	}
+}
+
+h5, .h5{
+	font-family: $font-head;
+	font-size: 22px;
+	text-transform: uppercase;
+	font-weight: bold;
+	@include res(xl) {
+		font-size: 20px;
+	}
+	@include res(l) {
+		font-size: 16px;
+	}
+	@include res(s) {
+		font-size: 14px;
+	}
+	@include res(xs) {
+		font-size: 12px;
+	}
 }
