--- a/sass/modules/_forms.scss
+++ b/sass/modules/_forms.scss
@@ -1,14 +1,22 @@
 label{cursor: pointer;}
 
-.text-input{
+.input-text {
 	display: inline-block;
+	width: 100%;
+	padding: 15px 25px;
 	font-family: $font;
 	font-size: 14px;
 	line-height: 1.3;
 	-webkit-appearance: none;
-	border: 1px solid #666;
-	padding: 5px 10px;
+	border: 1px solid #fff;
+	border-radius: 27px ;
 	overflow: visible;
+	@include res(xl) {
+		padding: 14px 23px;
+	}
+	@include res(l) {
+		padding: 12px 20px;
+	}
 
 	@include placeholder {
 		font-size: 14px;
@@ -22,6 +30,73 @@ label{cursor: pointer;}
 		@include placeholder {
 			opacity: 0;
 		}
+	}
+
+	&--subscr {
+		padding-right: 95px;
+		color: #2a2c3d;
+		font-size: 12px;
+		text-transform: uppercase;
+		@include res(xl) {
+			padding-right: 85px;
+		}
+		@include res(l) {
+			padding-right: 75px;
+		}
+		@include placeholder {
+			font-size: 12px;
+			text-transform: uppercase;
+			color: #2a2c3d;
+			opacity: 1;
+			transition: all 0.3s ease;
+		}
+	}
+}
+
+.form-subscribe {
+	position: relative;
+	input {
+		display: block;
+	}
+	button {
+		position: absolute;
+		top: 0;
+		right: 0;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 85px;
+		height: 100%;
+		text-align: center;
+		border: none;
+		border-radius: 0 27px 27px 0;
+		font-size: 30px;
+		box-shadow: 0 0 10px 0 #fff inset;
+		cursor: pointer;
+		transition: all 0.3s ease;
+		background: $light-blue;
+		@include res(xl) {
+			width: 75px;
+			font-size: 28px;
+		}
+		@include res(l) {
+			width: 65px;
+			font-size: 26px;
+		}
+		&:hover {
+			background: $pink;
+			i {
+				color: #fff;
+			}
+		}
+	}
+	i {
+		display: block;
+		width: 100%;
+		padding-right: 5px;
+		text-align: center;
+		flex-shrink: 0;
+		transition: all 0.3s ease;
 	}
 }
 
