--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 
 @import 'vendors/fancybox';
 @import 'vendors/simplebar';
+@import 'vendors/slick';
 
 @import 'base/reset';
 @import 'base/fonts';
@@ -19,5 +20,6 @@
 @import 'modules/top-panel';
 @import 'modules/aside-panel';
 @import 'modules/footer';
+@import 'modules/big-slider';
 
 @import 'pages/home';
