--- a/sass/modules/_buttons.scss
+++ b/sass/modules/_buttons.scss
@@ -1,7 +1,7 @@
 .btn{
 	display: inline-block;
 	position: relative;
-	padding: 10px 30px;
+	padding: 14px 35px;
 	vertical-align: top;
 	font-size: 20px;
 	font-family: $font-head;
@@ -11,16 +11,36 @@
 	text-decoration: none;
 	text-align: center;
 	white-space: nowrap;
-	border: 1px solid #DDD;
+	color: #2a2c3d;
+	border: none;
 	border-radius: 30px;
 	text-transform: uppercase;
 	cursor: pointer;
+	text-shadow: 0 1px 0 transparentize(#cd6688,0.35);
+	box-shadow: 0 0 8px 0 transparentize(#fff, 0.8) inset, 0 3px 0 0 #cd6688;
 	transition: all 0.3s ease;
 	user-select: none;
-	background-color: #DDD;
+	//transform: translate3d(0,0,0);
+	background: linear-gradient(to bottom, #f9cddf,#ff99c7);
+	@include res(xl) {
+		padding: 12px 30px;
+		font-size: 18px;
+	}
+	@include res(l) {
+		padding: 10px 20px;
+		font-size: 16px;
+	}
+	@include res(s) {
+		font-size: 14px;
+	}
 
 	&:focus{
 		outline: none;
+	}
+
+	&:hover {
+		color: #fff;
+		box-shadow: 0 0 8px 0 transparentize(#fff, 0.8) inset, 0 4px 0 0 #cd6688;
 	}
 
 	&--mini {
@@ -36,9 +56,12 @@
 	}
 	&--white {
 		border: 1px solid #fff;
+		box-shadow: none;
+		text-shadow: none;
 		background: #fff;
 		&:hover {
 			color: #fff;
+			box-shadow: none;
 			border-color: $pink;
 			background: $pink;
 		}
